exports[`prefer-single-array-predicate > invalid(1): array.some(element => element.foo) /* comment */ || array.some(element => element.bar); 1`] = `

  1 | array.some(element => element.foo) /* comment */ || array.some(element => element.bar);

`;

exports[`prefer-single-array-predicate > invalid(1): array.some(element => element.foo) /* comment */ || array.some(element => element.bar); 2`] = `

Message:
> 1 | array.some(element => element.foo) /* comment */ || array.some(element => element.bar);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a single \`Array#some()\` with a combined predicate.

`;

exports[`prefer-single-array-predicate > invalid(1): if (\n\tarray.some(element => element.foo === 1)\n\t|| array.some(element => element.bar === 2)\n) {} 1`] = `

  1 | if (
  2 | 	array.some(element => element.foo === 1)
  3 | 	|| array.some(element => element.bar === 2)
  4 | ) {}

`;

exports[`prefer-single-array-predicate > invalid(1): if (\n\tarray.some(element => element.foo === 1)\n\t|| array.some(element => element.bar === 2)\n) {} 2`] = `

Message:
  1 | if (
> 2 | 	array.some(element => element.foo === 1)
    | 	^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | 	|| array.some(element => element.bar === 2)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a single \`Array#some()\` with a combined predicate.
  4 | ) {}

Suggestion 1/1: Merge predicates into one \`Array#some()\` call.:
  1 | if (
  2 | 	array.some(element => element.foo === 1 || element.bar === 2)
  3 | ) {}

`;

exports[`prefer-single-array-predicate > invalid(10): function f(array: Int8Array) { if (array.some(element => element === 1) || array.some(element => element === 2)) {} } 1`] = `

  1 | function f(array: Int8Array) { if (array.some(element => element === 1) || array.some(element => element === 2)) {} }

`;

exports[`prefer-single-array-predicate > invalid(10): function f(array: Int8Array) { if (array.some(element => element === 1) || array.some(element => element === 2)) {} } 2`] = `

Message:
> 1 | function f(array: Int8Array) { if (array.some(element => element === 1) || array.some(element => element === 2)) {} }
    |                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a single \`Array#some()\` with a combined predicate.

Suggestion 1/1: Merge predicates into one \`Array#some()\` call.:
  1 | function f(array: Int8Array) { if (array.some(element => element === 1 || element === 2)) {} }

`;

exports[`prefer-single-array-predicate > invalid(2): array.every(element => /* comment */ element.foo) && array.every(element => element.bar); 1`] = `

  1 | array.every(element => /* comment */ element.foo) && array.every(element => element.bar);

`;

exports[`prefer-single-array-predicate > invalid(2): array.every(element => /* comment */ element.foo) && array.every(element => element.bar); 2`] = `

Message:
> 1 | array.every(element => /* comment */ element.foo) && array.every(element => element.bar);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a single \`Array#every()\` with a combined predicate.

`;

exports[`prefer-single-array-predicate > invalid(2): if (\n\tarray.every(element => element.foo === 1)\n\t&& array.every(element => element.bar === 2)\n) {} 1`] = `

  1 | if (
  2 | 	array.every(element => element.foo === 1)
  3 | 	&& array.every(element => element.bar === 2)
  4 | ) {}

`;

exports[`prefer-single-array-predicate > invalid(2): if (\n\tarray.every(element => element.foo === 1)\n\t&& array.every(element => element.bar === 2)\n) {} 2`] = `

Message:
  1 | if (
> 2 | 	array.every(element => element.foo === 1)
    | 	^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | 	&& array.every(element => element.bar === 2)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a single \`Array#every()\` with a combined predicate.
  4 | ) {}

Suggestion 1/1: Merge predicates into one \`Array#every()\` call.:
  1 | if (
  2 | 	array.every(element => element.foo === 1 && element.bar === 2)
  3 | ) {}

`;

exports[`prefer-single-array-predicate > invalid(3): array.some(element => element.foo) || array.some(element => element.bar) || array.some(element => element.baz); 1`] = `

  1 | array.some(element => element.foo) || array.some(element => element.bar) || array.some(element => element.baz);

`;

exports[`prefer-single-array-predicate > invalid(3): array.some(element => element.foo) || array.some(element => element.bar) || array.some(element => element.baz); 2`] = `

Message:
> 1 | array.some(element => element.foo) || array.some(element => element.bar) || array.some(element => element.baz);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a single \`Array#some()\` with a combined predicate.

Suggestion 1/1: Merge predicates into one \`Array#some()\` call.:
  1 | array.some(element => element.foo || element.bar || element.baz);

`;

exports[`prefer-single-array-predicate > invalid(4): array.some(element => (element.foo)) || array.some(element => (element.bar)); 1`] = `

  1 | array.some(element => (element.foo)) || array.some(element => (element.bar));

`;

exports[`prefer-single-array-predicate > invalid(4): array.some(element => (element.foo)) || array.some(element => (element.bar)); 2`] = `

Message:
> 1 | array.some(element => (element.foo)) || array.some(element => (element.bar));
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a single \`Array#some()\` with a combined predicate.

Suggestion 1/1: Merge predicates into one \`Array#some()\` call.:
  1 | array.some(element => (element.foo) || (element.bar));

`;

exports[`prefer-single-array-predicate > invalid(5): array.every(element => element.foo || element.bar) && array.every(element => element.baz); 1`] = `

  1 | array.every(element => element.foo || element.bar) && array.every(element => element.baz);

`;

exports[`prefer-single-array-predicate > invalid(5): array.every(element => element.foo || element.bar) && array.every(element => element.baz); 2`] = `

Message:
> 1 | array.every(element => element.foo || element.bar) && array.every(element => element.baz);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a single \`Array#every()\` with a combined predicate.

Suggestion 1/1: Merge predicates into one \`Array#every()\` call.:
  1 | array.every(element => (element.foo || element.bar) && element.baz);

`;

exports[`prefer-single-array-predicate > invalid(6): array.some(element => element.foo && element.bar) || array.some(element => element.baz); 1`] = `

  1 | array.some(element => element.foo && element.bar) || array.some(element => element.baz);

`;

exports[`prefer-single-array-predicate > invalid(6): array.some(element => element.foo && element.bar) || array.some(element => element.baz); 2`] = `

Message:
> 1 | array.some(element => element.foo && element.bar) || array.some(element => element.baz);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a single \`Array#some()\` with a combined predicate.

Suggestion 1/1: Merge predicates into one \`Array#some()\` call.:
  1 | array.some(element => element.foo && element.bar || element.baz);

`;

exports[`prefer-single-array-predicate > invalid(7): this.items.some(element => element.foo) || this.items.some(element => element.bar); 1`] = `

  1 | this.items.some(element => element.foo) || this.items.some(element => element.bar);

`;

exports[`prefer-single-array-predicate > invalid(7): this.items.some(element => element.foo) || this.items.some(element => element.bar); 2`] = `

Message:
> 1 | this.items.some(element => element.foo) || this.items.some(element => element.bar);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a single \`Array#some()\` with a combined predicate.

Suggestion 1/1: Merge predicates into one \`Array#some()\` call.:
  1 | this.items.some(element => element.foo || element.bar);

`;

exports[`prefer-single-array-predicate > invalid(8): function foo(array: string[]) { array.some(element => element.length > 1) || array.some(element => element.length < 10); } 1`] = `

  1 | function foo(array: string[]) { array.some(element => element.length > 1) || array.some(element => element.length < 10); }

`;

exports[`prefer-single-array-predicate > invalid(8): function foo(array: string[]) { array.some(element => element.length > 1) || array.some(element => element.length < 10); } 2`] = `

Message:
> 1 | function foo(array: string[]) { array.some(element => element.length > 1) || array.some(element => element.length < 10); }
    |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a single \`Array#some()\` with a combined predicate.

Suggestion 1/1: Merge predicates into one \`Array#some()\` call.:
  1 | function foo(array: string[]) { array.some(element => element.length > 1 || element.length < 10); }

`;

exports[`prefer-single-array-predicate > invalid(9): function foo(array: string[]) { array.some((element: string) => element.length > 1) || array.some((element: string) => element.length < 10); } 1`] = `

  1 | function foo(array: string[]) { array.some((element: string) => element.length > 1) || array.some((element: string) => element.length < 10); }

`;

exports[`prefer-single-array-predicate > invalid(9): function foo(array: string[]) { array.some((element: string) => element.length > 1) || array.some((element: string) => element.length < 10); } 2`] = `

Message:
> 1 | function foo(array: string[]) { array.some((element: string) => element.length > 1) || array.some((element: string) => element.length < 10); }
    |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a single \`Array#some()\` with a combined predicate.

Suggestion 1/1: Merge predicates into one \`Array#some()\` call.:
  1 | function foo(array: string[]) { array.some((element: string) => element.length > 1 || element.length < 10); }

`;
